--- a/Onyx/Onyx.Cartographer/AngularViews/About/index.html
+++ b/Onyx/Onyx.Cartographer/AngularViews/About/index.html
@@ -1,1 +1,10 @@
-﻿about
+﻿<div id="aboutContainer">
+	<h1>
+		About Onyx
+	</h1>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit fusce vel sapien elit in malesuada semper mi, id sollicitudin urna fermentum ut fusce varius nisl ac ipsum gravida vel pretium tellus.
+	</p>
+
+	
+</div>
