--- a/Onyx/Onyx.Cartographer/AngularViews/About/index.html
+++ b/Onyx/Onyx.Cartographer/AngularViews/About/index.html
@@ -6,5 +6,31 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit fusce vel sapien elit in malesuada semper mi, id sollicitudin urna fermentum ut fusce varius nisl ac ipsum gravida vel pretium tellus.
 	</p>
 
-	
+	<div class="credits">
+		<div class="developersAndTesters">
+			<div class="developers">
+				<h2>Development Team:</h2>
+				<ul>
+					<li>AMD (Aaron Dierking)</li>
+					<li>Synth (Matt Saville)</li>
+					<li>Thunder Waffle (Tj Tunnell)</li>
+					<li>Xerax (Alex Reed)</li>
+				</ul>
+			</div>
+
+			<div class="testers">
+				<h2>Testers:</h2>
+				<ul>
+					<li>Assault Command</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="thanksTo">
+			<h2>Special Thanks To:</h2>
+			<ul>
+				<li>Kornman00</li>
+			</ul>
+		</div>
+	</div>
 </div>
